# OrbitStart

./: README.md  latest.json  package-lock.json  package.json  playwright.config.ts
docs/: ARCHITECTURE_OVERVIEW.md  PHASE4_VALIDATION.md
orbitstart-video/: assets-manifest.md  outline.md  script.md
registry/: plugins.json  themes.json  update-channel.json
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: OnboardingWizard.tsx  SubTagBar.tsx
src/components/FloatingBubble/: FloatingBubble.css  FloatingBubble.tsx
src/components/Workspaces/: Workspaces.tsx
src/data/: catalog.ts
src/desktop/: contextMenu.ts  desktopShell.ts  externalOpen.ts  windowControls.ts
src/lib/: native.ts  onboarding.ts  searchEngine.ts
tests/: atelier-zero.spec.ts  basic.spec.ts
